deploy-prod.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: demo-policy-pipeline
    lifecycle: prod
  namespace: myapp-prod
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: demo-policy-pipeline
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-policy-pipeline
  namespace: myapp-prod
spec:
  selector:
    matchLabels:
      app: demo-policy-pipeline
      lifecycle: prod
  replicas: 1
  template:
    metadata:
      labels:
        app: demo-policy-pipeline
        lifecycle: prod
    spec:
      containers:
        - name: demo-policy-pipeline
          image: remiphilippe/demo-policy-pipeline
          ports:
            - containerPort: 80
              protocol: TCP
