policy-dev.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy-to-db
  namespace: myapp-dev
spec:
  podSelector:
    matchLabels:
      app: demo-policy-pipeline
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: db
          location: dc1
          lifecycle: dev
    ports:
    - protocol: TCP
      port: 3306
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy-to-db
  namespace: myapp-dev
spec:
  podSelector:
    matchLabels:
      app: demo-policy-pipeline
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: db
          location: dc1
          lifecycle: prod
    ports:
    - protocol: TCP
      port: 3306
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy-from-campus
  namespace: myapp-dev
spec:
  podSelector:
    matchLabels:
      system/service_name: frontend
  policyTypes:
  - Ingress
  ingress:
  - from:
    - ipBlock:
        cidr: 0.0.0.0/0
    ports:
    - protocol: TCP
      port: 80
